[package]
name = "tosca-stack"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "A tosca variant library for stack-oriented devices."
license = "MIT"

[dependencies]
tosca.git = "https://github.com/ToscaLabs/tosca"
tosca.version = "0.1.0"

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive", "alloc"]

heapless.version = "0.9.2"
heapless.default-features = false
heapless.features = ["serde"]

[dev-dependencies]
serde_json.version = "1"
serde_json.default-features = false
serde_json.features = ["alloc"]
