[package]
name = "tosca-stack"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "A variant of the tosca library crate for stack-oriented devices."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ToscaLabs/tosca-stack"
keywords = ["iot", "stack-oriented-devices", "library", "devices"]
rust-version = "1.90"
readme = "README.md"

[dependencies]
tosca.version = "0.1.0"

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive", "alloc"]

heapless.version = "0.8.0"
heapless.default-features = false
heapless.features = ["serde"]

[dev-dependencies]
serde_json.version = "1"
serde_json.default-features = false
serde_json.features = ["alloc"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
